syntax = "proto3";
package text;
import "layout.proto";

option go_package = "pb";
option objc_class_prefix = "MochiPB";

message SizeFunc {
    Text text = 1;
    layout.Point minSize = 2;
    layout.Point maxSize = 3;
}

message Text {
    TextStyle style = 1;
    string text = 2;
}

message Font {
    string family = 1;
    string face = 2;
    double size = 3;
}

message Color {
    uint32 red = 1;
    uint32 blue = 2;
    uint32 green = 3;
    uint32 alpha = 4;
}

enum TextAlignment {
    TEXT_ALIGNMENT_LEFT = 0;
    TEXT_ALIGNMENT_RIGHT = 1;
    TEXT_ALIGNMENT_CENTER = 2;
    TEXT_ALIGNMENT_JUSTIFIED = 3;
}

enum StrikethroughStyle {
    STRIKETHROUGH_STYLE_NONE = 0;
    STRIKETHROUGH_STYLE_SINGLE = 1;
    STRIKETHROUGH_STYLE_DOUBLE = 2;
    STRIKETHROUGH_STYLE_THICK = 3;
    STRIKETHROUGH_STYLE_DOTTED = 4;
    STRIKETHROUGH_STYLE_DASHED = 5;
}
    
enum UnderlineStyle {
    UNDRELINE_STYLE_NONE = 0;
    UNDRELINE_STYLE_SINGLE = 1;
    UNDRELINE_STYLE_DOUBLE = 2;
    UNDRELINE_STYLE_THICK = 3;
    UNDRELINE_STYLE_DOTTED = 4;
    UNDRELINE_STYLE_DASHED = 5;
}

enum TextWrap {
    TEXT_WRAP_NONE = 0;
    TEXT_WRAP_WORD = 1;
    TEXT_WRAP_CHARACTER = 2;
}

enum Truncation {
    TRUNCATION_NONE = 0;
    TRUNCATION_START = 1;
    TRUNCATION_MIDDLE = 2;
    TRUNCATION_END = 3;
}

message TextStyle {
    TextAlignment textAlignment = 2;
    StrikethroughStyle strikethroughStyle = 4;
    Color strikethroughColor = 6;
    UnderlineStyle underlineStyle = 8;
    Color underlineColor = 10;
    Font font = 12;
    double hyphenation = 14;
    double lineHeightMultiple = 16;
    int64 maxLines = 18;
    Color textColor = 20;
    TextWrap wrap = 22;
    Truncation truncation = 24;
    string truncationString = 26;
}
